# nix-exprs

./: .envrc  .git-blame-ignore-revs  .sops.yaml  flake.nix  justfile  schema.nix
common/: common.nix  nixpkgs.nix
configs/: flake-parts.nix
configs/_flake/: flake.nix
configs/flake-parts/: common.nix
configs/unify/: home-manager.nix  nixos.nix
dev/: common.nix  devshell.nix  flake-parts.nix  flake.nix  nixpkgs.nix  treefmt.nix
dev/_flake/: flake.nix
dev/devshell/: infra.nix  nix.nix  secrets.nix
flake/modules/: nixpkgs.nix  passthru.nix
flake/outputs/: devshell.nix  flake-module.nix  nixpkgs.nix  overlays.nix  templates.nix  treefmt.nix
hosts/: flake-parts.nix  nixpkgs.nix
hosts/marisa-7d76/: common.nix  hardware-configuration.nix  networking.nix
infra/: .gitignore  backend.tf  data.json  enthalpy.tf  hosts.tf  secrets.tf  secrets.yaml  terraform.tfstate  vultr.tf
lib/: attrsets.nix  default.nix  flake-parts.nix  misc.nix  path.nix  strings.nix  types.nix
lib/flake-parts/: lib.nix
lib/misc/: default.nix  service-hardened.nix
lib/network/: default.nix  internal.nix  ipv6.nix
modules/: checks.nix  devshell.nix  flake-modules.nix  flake-parts.nix  lib.nix  meta.nix  nixpkgs.nix  overlays.nix  passthru.nix  systems.nix  treefmt.nix
modules/_flake/: flake.nix
modules/enthalpy/: bird.nix  clat.nix  (+4 more)
pkgs/: checks.nix  default.nix  flake-parts.nix  overlays.nix
profiles/: flake-parts.nix  meta.nix  nixpkgs.nix  unify.nix
secrets/: common.yaml
templates/: default.nix
templates/python-uv-torch-cu124/: .envrc  flake.nix  pyproject.toml
(+556 files in other folders)
